# GeotechStaffEngineer

./: .gitignore  .gitmodules  CLAUDE.md  CONSOLIDATION_CHANGES.md  CONSOLIDATION_PLAN.md  DISCLAIMER.md  HANDOFF.md  HANDOFF_2026-06-14.md  LICENSE  README.md  ags4_agent_foundry.py  axial_pile_agent_foundry.py  bearing_capacity_agent_foundry.py  calc_package_agent_foundry.py  conftest.py  dashboard.html  dashboard_app.py  demo_groundhog_agent.ipynb  dm7_agent_foundry.py  downdrag_agent_foundry.py  drilled_shaft_agent_foundry.py  fem2d_gui.py  fem2d_qt.py  funhouse_agent_class.txt  generate_all_pdfs.py  geolysis_agent_foundry.py  geotech_modules_system_prompt.txt  geotech_next_phases_1_2_3_prompt.md  geotech_qt_gui.py  ground_improvement_agent_foundry.py  groundhog_agent.py  groundhog_agent_foundry.py  groundhog_agent_system_prompt.txt  gstools_agent_foundry.py  hvsrpy_agent_foundry.py  lateral_pile_agent_foundry.py  lateral_pile_claude_code_prompt.md  liquepy_agent_foundry.py  opensees_agent_foundry.py  pile_group_agent_foundry.py  (+18 more)
.streamlit/: config.toml
DM7Eqs/: DESIGN.md
ags4_agent/: DESIGN.md  __init__.py  ags4_reader.py  ags4_utils.py  results.py
axial_pile/: DESIGN.md  __init__.py  beta_method.py  calc_steps.py  capacity.py  nordlund.py  pile_types.py  results.py  soil_profile.py  tomlinson.py
bearing_capacity/: DESIGN.md  __init__.py  calc_steps.py  capacity.py  concrete_design.py  factors.py  footing.py  results.py  soil_profile.py
calc_package/: DESIGN.md  __init__.py  data_model.py  dm7_figures.py  equation_converter.py  interactive.py  latex_compiler.py  latex_renderer.py  latex_template.py  renderer.py  template.py
chat_agent/: __init__.py  agent.py  parser.py  react_prompt.py  system_prompt.py
docs/: CALC_VIZ_PLAN.md  FOUNDRY.md  V5.0_DEEPAGENTS_MIGRATION.md  V5.0_TODO.md  V5.1_SUMMARY.html  agent_showcase.html  agent_workflow_slide.html  agentic_retrieval_devguide.html  funhouse_agent_expansion_plan.md  funhouse_agent_guide.md  funhouse_agent_guide_web_version.md  funhouse_agent_implementation.md  geotech_eval.md  geotech_eval_20260705.json  geotech_eval_v54_additions.md  geotech_test_suite_results.json  overview.html  webapp_guide.md
downdrag/: DESIGN.md  __init__.py  analysis.py  calc_steps.py  results.py  soil.py
drawing_ir/: DESIGN.md  __init__.py  ingest.py  queries.py  raster.py  results.py
drilled_shaft/: DESIGN.md  __init__.py  calc_steps.py  capacity.py  end_bearing.py  lrfd.py  results.py  shaft.py  side_resistance.py  soil_profile.py
dxf_export/: DESIGN.md  __init__.py  results.py  writer.py
dxf_import/: DESIGN.md  __init__.py  converter.py  discovery.py  parser.py  results.py  units.py
fdm2d/: DESIGN.md  __init__.py  analysis.py  grid.py  materials.py  results.py  solver.py  zones.py
fem2d/: DESIGN.md  UPGRADE_PLAN.md  VALIDATION.md  __init__.py  analysis.py  assembly.py  calc_steps.py  elements.py  local_fos.py  materials.py  mesh.py  mesh_study.py  plotting.py  porewater.py  results.py  solver.py  srm.py
foundry/: __init__.py  axial_pile_agent_foundry.py  bearing_capacity_agent_foundry.py  calc_package_agent_foundry.py  dxf_import_agent_foundry.py  geolysis_agent_foundry.py  ground_improvement_agent_foundry.py  groundhog_agent_foundry.py  hvsrpy_agent_foundry.py  lateral_pile_agent_foundry.py  liquepy_agent_foundry.py  opensees_agent_foundry.py  pdf_import_agent_foundry.py  pile_group_agent_foundry.py  pydiggs_agent_foundry.py  pygef_agent_foundry.py  pyseismosoil_agent_foundry.py  pystra_agent_foundry.py  pystrata_agent_foundry.py  retaining_walls_agent_foundry.py  salib_agent_foundry.py  seismic_geotech_agent_foundry.py  settlement_agent_foundry.py  sheet_pile_agent_foundry.py  slope_stability_agent_foundry.py  soe_agent_foundry.py  subsurface_char_agent_foundry.py  swprocess_agent_foundry.py  wind_loads_agent_foundry.py
foundry_test_harness/: __init__.py  harness.py  scenarios.py  test_tier1_textbook.py  test_tier2_workflows.py  test_tier3_crosscheck.py  test_tier4_error_handling.py
funhouse_agent/: DESIGN.md  __init__.py  _disclaimer.py  _fileio.py  agent.py  dispatch.py  engine.py  geotech_test_suite.json  native_tools.py  notebook.py  panel_chat.py  react_support.py  review_checklists.py  reviewer.py  reviewers.py  run_local.py  run_scenarios.py  runtime_check.py  smoke_test_native.py  system_prompt.py  test_scenarios.json  test_scenarios_notebook.ipynb  vision_tools.py  worked_examples.json  worked_examples.py
geo_project/: DESIGN.md  UPGRADE_PLAN.md  __init__.py  builders.py  demo_model_setup.py  ingest.py  render.py  schema.py  templates.py  validate.py
geolysis_agent/: DESIGN.md  __init__.py  bearing.py  classification.py  geolysis_utils.py  results.py  spt_corrections.py
geotech_common/: DESIGN.md  __init__.py  engineering_checks.py  plotting.py  soil_profile.py  soil_properties.py  units.py  validation.py  water.py
ground_improvement/: DESIGN.md  __init__.py  aggregate_piers.py  calc_steps.py  feasibility.py  results.py  surcharge.py  vibro.py  wick_drains.py
gstools_agent/: DESIGN.md  __init__.py  gstools_utils.py  kriging.py  random_field.py  results.py  variogram.py
hvsrpy_agent/: DESIGN.md  __init__.py  hvsr_analysis.py  hvsrpy_utils.py  results.py
lateral_pile/: DESIGN.md  __init__.py  analysis.py  calc_steps.py  composite_section.py  pile.py  py_curves.py  results.py  soil.py  solver.py  validation.py
liquepy_agent/: DESIGN.md  __init__.py  cpt_liquefaction.py  field_correlations.py  liquepy_utils.py  results.py  spt_liquefaction.py
module_work/: A2_CONTEXT_DESIGN.md  A7_INDUSTRY_MEMO.md  APP_PLAN.md  BOARD.md  FOUNDRY_APP_PLAN.md  FUTURE_IDEAS.md  README.md  V5.2_COVERAGE.md  V5.3_PLAN.md  V5.4_PLAN.md  V6.0_RESTRUCTURE_PLAN.md  WEEKEND_QC_2026-06-13.md  a2_measure.py  deep-foundations.md  foundations.md  foundry_staleness_report.md  module_feedback.json  provenance_audit_other.md  provenance_audit_slope.md  references_review_v5.1.md  slope-fem.md  triage_feedback.py
opensees_agent/: DESIGN.md  __init__.py  bnwf_pile.py  ground_motions.py  opensees_utils.py  pm4sand_dss.py  results.py  (+1 more)
(+637 files in other folders)
