[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geotech-staff-engineer"
version = "3.0.0"
description = "Python toolkit for LLM-based geotechnical engineering agents — 30 analysis modules covering foundations, piles, slopes, seismic, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Sean O'Connell", email = "soconnell345@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "geotech-references>=1.0.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
calc = ["jinja2>=3.1"]
groundhog = ["groundhog>=0.11"]
opensees = ["openseespy>=3.6"]
pystrata = ["pystrata>=0.5"]
seismic-signals = ["eqsig>=1.3", "pyrotd>=0.6"]
liquepy = ["liquepy>=0.3"]
pygef = ["pygef>=0.10"]
hvsrpy = ["hvsrpy>=2.0"]
gstools = ["gstools>=1.5"]
ags4 = ["python-ags4>=0.5"]
salib = ["SALib>=1.4"]
pyseismosoil = ["PySeismoSoil>=0.5"]
swprocess = ["swprocess>=0.3"]
geolysis = ["geolysis>=0.4"]
pystra = ["pystra>=1.3"]
pydiggs = ["pydiggs>=0.1"]
dxf = ["ezdxf>=1.4"]
full = [
    "matplotlib>=3.8",
    "jinja2>=3.1",
    "groundhog>=0.11",
    "openseespy>=3.6",
    "pystrata>=0.5",
    "eqsig>=1.3",
    "pyrotd>=0.6",
    "liquepy>=0.3",
    "pygef>=0.10",
    "hvsrpy>=2.0",
    "gstools>=1.5",
    "python-ags4>=0.5",
    "SALib>=1.4",
    "PySeismoSoil>=0.5",
    "swprocess>=0.3",
    "geolysis>=0.4",
    "pystra>=1.3",
    "pydiggs>=0.1",
]

[project.urls]
Homepage = "https://github.com/soconnell345-geotech/GeotechStaffEngineer"
Repository = "https://github.com/soconnell345-geotech/GeotechStaffEngineer"

[tool.setuptools.packages.find]
include = [
    "bearing_capacity*",
    "settlement*",
    "axial_pile*",
    "sheet_pile*",
    "soe*",
    "lateral_pile*",
    "pile_group*",
    "wave_equation*",
    "drilled_shaft*",
    "seismic_geotech*",
    "retaining_walls*",
    "ground_improvement*",
    "slope_stability*",
    "downdrag*",
    "geotech_common*",
    "calc_package*",
    "opensees_agent*",
    "pystrata_agent*",
    "seismic_signals_agent*",
    "liquepy_agent*",
    "pygef_agent*",
    "hvsrpy_agent*",
    "gstools_agent*",
    "ags4_agent*",
    "salib_agent*",
    "pyseismosoil_agent*",
    "swprocess_agent*",
    "geolysis_agent*",
    "pystra_agent*",
    "pydiggs_agent*",
    "subsurface_characterization*",
    "wind_loads*",
    "dxf_import*",
]
exclude = [
    "*.tests",
    "*.tests.*",
    "foundry*",
    "trial_agent*",
    "foundry_test_harness*",
    "docs*",
    "DM7Eqs*",
    "geotech-references*",
]

[tool.setuptools]
py-modules = ["groundhog_agent"]

[tool.setuptools.package-data]
calc_package = ["templates/*.html", "templates/*.tex"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "validation.py"]
testpaths = [
    "bearing_capacity", "settlement", "axial_pile", "sheet_pile", "soe",
    "lateral_pile", "pile_group", "wave_equation", "drilled_shaft",
    "seismic_geotech", "retaining_walls", "ground_improvement",
    "slope_stability", "downdrag", "geotech_common",
    "opensees_agent", "pystrata_agent", "seismic_signals_agent",
    "liquepy_agent", "pygef_agent", "hvsrpy_agent", "gstools_agent",
    "ags4_agent", "salib_agent", "pyseismosoil_agent", "swprocess_agent",
    "geolysis_agent", "pystra_agent", "pydiggs_agent",
    "subsurface_characterization",
    "wind_loads",
    "dxf_import",
    "chat_agent",
    "foundry_test_harness",
    "geotech-references/tests",
]
