[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geotech-staff-engineer"
version = "5.1.0rc4"
description = "Python toolkit for LLM-based geotechnical engineering agents — 30 analysis modules covering foundations, piles, slopes, reliability, seismic (incl. FEMA P-2082 / 2020 NEHRP site classification), excavation support (incl. the California/Caltrans Trenching and Shoring Manual reference), pavements (incl. FHWA-NHI-05-037 Geotechnical Aspects of Pavements), subsurface characterization (DIGGS/GEF/AGS4 data I/O), FEM, PDF/DXF import, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Sean O'Connell", email = "soconnell345@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "geotech-references>=1.2.5",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
calc = ["jinja2>=3.1"]
groundhog = ["groundhog>=0.11"]
opensees = ["openseespy>=3.6"]
pystrata = ["pystrata>=0.5"]
seismic-signals = ["eqsig>=1.2", "pyrotd>=0.6"]
liquepy = ["liquepy>=0.3"]
hvsrpy = ["hvsrpy>=2.0"]
gstools = ["gstools>=1.5"]
salib = ["SALib>=1.4"]
swprocess = ["swprocess>=0.3"]
pystra = ["pystra>=1.3"]
dxf = ["ezdxf>=1.4"]
interactive = ["plotly>=5"]
pdf = ["PyMuPDF>=1.23"]
# subsurface_characterization format adapters (optional, dependency-backed):
# GEF/BRO-XML (pygef), AGS4 (python-ags4), DIGGS validation (pydiggs). The
# legacy per-library extra names are kept as aliases for backward compatibility.
subsurface = ["pygef>=0.10", "python-ags4>=0.5", "pydiggs>=0.1"]
pygef = ["pygef>=0.10"]
ags4 = ["python-ags4>=0.5"]
pydiggs = ["pydiggs>=0.1"]
# v5.0 (TEST/pre-release): the deepagents-based agent in funhouse_agent.deep.
# OPT-IN ONLY — `import funhouse_agent` still gives the stable v1 agent. Install
# `geotech-staff-engineer[deep]` to use `funhouse_agent.deep.build_deep_agent`.
deep = [
    "deepagents>=0.6.8",
    "langchain>=1.3",
    "langgraph>=1.2",
    "langchain-anthropic>=1.4",
    # langchain-protocol uses typing_extensions.TypedDict(extra_items=...) (PEP 728),
    # which needs typing_extensions>=4.13. Databricks Py3.12 ships an older one and
    # langchain-protocol doesn't pin it high enough, so force the floor here.
    "typing_extensions>=4.13",
]
full = [
    "matplotlib>=3.8",
    "jinja2>=3.1",
    "plotly>=5",
    "groundhog>=0.11",
    "openseespy>=3.6",
    "pystrata>=0.5",
    "eqsig>=1.2",
    "pyrotd>=0.6",
    "liquepy>=0.3",
    "pygef>=0.10",
    "hvsrpy>=2.0",
    "gstools>=1.5",
    "python-ags4>=0.5",
    "SALib>=1.4",
    "swprocess>=0.3",
    "pystra>=1.3",
    "pydiggs>=0.1",
    "ezdxf>=1.4",
    "PyMuPDF>=1.23",
]

[project.urls]
Homepage = "https://github.com/soconnell345-geotech/GeotechStaffEngineer"
Repository = "https://github.com/soconnell345-geotech/GeotechStaffEngineer"

[tool.setuptools.packages.find]
include = [
    "bearing_capacity*",
    "settlement*",
    "axial_pile*",
    "sheet_pile*",
    "soe*",
    "lateral_pile*",
    "pile_group*",
    "wave_equation*",
    "drilled_shaft*",
    "seismic_geotech*",
    "retaining_walls*",
    "ground_improvement*",
    "slope_stability*",
    "reliability*",
    "downdrag*",
    "geotech_common*",
    "calc_package*",
    "opensees_agent*",
    "pystrata_agent*",
    "seismic_signals_agent*",
    "liquepy_agent*",
    "hvsrpy_agent*",
    "gstools_agent*",
    "salib_agent*",
    "swprocess_agent*",
    "pystra_agent*",
    "subsurface_characterization*",
    "dxf_import*",
    "dxf_export*",
    "pdf_import*",
    "fem2d*",
    "geo_project*",
    "funhouse_agent*",
]
exclude = [
    "*.tests",
    "*.tests.*",
    "foundry*",
    "trial_agent*",
    "foundry_test_harness*",
    "docs*",
    "geotech-references*",
]

[tool.setuptools]
py-modules = ["groundhog_agent"]

[tool.setuptools.package-data]
calc_package = ["templates/*.html", "templates/*.tex"]
# Ship the eval question set so funhouse_agent.deep.eval_harness works from an
# installed wheel (the v5.0 A/B self-test). Tests themselves are not shipped.
funhouse_agent = ["geotech_test_suite.json", "eval_samples/*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
python_files = ["test_*.py", "validation.py"]
testpaths = [
    "bearing_capacity", "settlement", "axial_pile", "sheet_pile", "soe",
    "lateral_pile", "pile_group", "wave_equation", "drilled_shaft",
    "seismic_geotech", "retaining_walls", "ground_improvement",
    "slope_stability", "reliability", "downdrag", "geotech_common",
    "opensees_agent", "pystrata_agent", "seismic_signals_agent",
    "liquepy_agent", "hvsrpy_agent", "gstools_agent",
    "salib_agent", "swprocess_agent",
    "pystra_agent",
    "subsurface_characterization",
    "dxf_import",
    "dxf_export",
    "pdf_import",
    "fem2d",
    "geo_project",
    "funhouse_agent",
    "foundry_test_harness",
    "geotech-references/tests",
]
