[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geotech-staff-engineer"
version = "5.9.1"
description = "Python toolkit for LLM-based geotechnical engineering agents — 31 analysis modules covering foundations, piles, slopes, reliability, seismic (incl. FEMA P-2082 / 2020 NEHRP site classification), excavation support (incl. the California/Caltrans Trenching and Shoring Manual reference), pavement design (AASHTO 1993 and UFC 3-250-01, incl. FHWA-NHI-05-037 Geotechnical Aspects of Pavements), subsurface characterization (DIGGS/GEF/AGS4 data I/O), FEM, PDF/DXF import, and more"
readme = "README.md"
license = "MIT"
# Ship the MIT license and the professional-use disclaimer into BOTH the sdist
# and the wheel (the wheel lands them under .dist-info/licenses/). The README's
# "Professional-use disclaimer" section is the PyPI-page notice; DISCLAIMER.md is
# the full text a `pip download` / installed copy carries alongside it.
license-files = ["LICENSE", "DISCLAIMER.md"]
requires-python = ">=3.10"
authors = [
    {name = "Sean O'Connell", email = "soconnell345@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "geotech-references>=1.3.3",
    # -- agent stack (formerly the [deep] extra) --
    "deepagents>=0.6.8",
    "langchain>=1.3",
    "langgraph>=1.2",
    "langchain-anthropic>=1.4",
    # Foundry LLM-proxy GPT RIDs need the OpenAI chat client out of the box.
    "langchain-openai>=1.3",
    # langchain-protocol uses typing_extensions.TypedDict(extra_items=...) (PEP 728),
    # which needs typing_extensions>=4.13. Databricks Py3.12 ships an older one and
    # langchain-protocol doesn't pin it high enough, so force the floor here.
    "typing_extensions>=4.13",
    # langgraph-sdk needs websockets<16 but environments whose base image ships a
    # newer websockets (e.g. Foundry's Streamlit container, conda websockets 16.x)
    # end up with an unsatisfiable lockfile at app-publish time. Pin the working
    # range here so fresh resolves never pick 16+.
    "websockets>=14,<16",
    # -- web chat app (formerly the [webapp] extra) --
    "streamlit>=1.36",
    # -- analysis backends, plotting, reporting (formerly [full] + [pdf]) --
    "matplotlib>=3.8",
    "jinja2>=3.1",
    "plotly>=5",
    "groundhog>=0.11",
    "openseespy>=3.6",
    "pystrata>=0.5",
    "eqsig>=1.2",
    "pyrotd>=0.6",
    "liquepy>=0.3",
    "pygef>=0.10",
    "hvsrpy>=2.0",
    "gstools>=1.5",
    "python-ags4>=0.5",
    "SALib>=1.4",
    "swprocess>=0.3",
    "pystra>=1.3",
    "pydiggs>=0.1",
    "ezdxf>=1.4",
    "PyMuPDF>=1.23",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
# As of the extras consolidation (owner request, 2026-07-17), a plain
# `pip install geotech-staff-engineer` brings the ENTIRE stack: every analysis
# backend, the deep agent, the Streamlit webapp, and PDF reporting. The extra
# names below are kept as EMPTY ALIASES so every previously documented install
# command (e.g. `geotech-staff-engineer[deep,full,pdf]`) keeps working.
plot = []
calc = []
groundhog = []
opensees = []
pystrata = []
seismic-signals = []
liquepy = []
hvsrpy = []
gstools = []
salib = []
swprocess = []
pystra = []
dxf = []
interactive = []
pdf = []
raster = []
subsurface = []
pygef = []
ags4 = []
pydiggs = []
deep = []
webapp = []
full = []

[project.scripts]
# Print the full professional-use disclaimer on demand.
geotech-disclaimer = "funhouse_agent._disclaimer:main"

[project.urls]
Homepage = "https://github.com/soconnell345-geotech/GeotechStaffEngineer"
Repository = "https://github.com/soconnell345-geotech/GeotechStaffEngineer"

[tool.setuptools.packages.find]
include = [
    "bearing_capacity*",
    "settlement*",
    "axial_pile*",
    "sheet_pile*",
    "soe*",
    "lateral_pile*",
    "pile_group*",
    "wave_equation*",
    "drilled_shaft*",
    "seismic_geotech*",
    "retaining_walls*",
    "pavement_design*",
    "ground_improvement*",
    "slope_stability*",
    "reliability*",
    "downdrag*",
    "geotech_common*",
    "calc_package*",
    "opensees_agent*",
    "pystrata_agent*",
    "seismic_signals_agent*",
    "liquepy_agent*",
    "hvsrpy_agent*",
    "gstools_agent*",
    "salib_agent*",
    "swprocess_agent*",
    "pystra_agent*",
    "subsurface_characterization*",
    "dxf_import*",
    "dxf_export*",
    "pdf_import*",
    "drawing_ir*",
    "fem2d*",
    "geo_project*",
    "funhouse_agent*",
    "webapp*",
]
exclude = [
    "*.tests",
    "*.tests.*",
    "foundry*",
    "trial_agent*",
    "foundry_test_harness*",
    "docs*",
    "geotech-references*",
]

[tool.setuptools]
py-modules = ["groundhog_agent"]

[tool.setuptools.package-data]
calc_package = ["templates/*.html", "templates/*.tex"]
# Ship the eval question set so funhouse_agent.deep.eval_harness works from an
# installed wheel (the v5.0 A/B self-test). Tests themselves are not shipped.
funhouse_agent = ["geotech_test_suite.json", "eval_samples/*",
                  "worked_examples.json"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
python_files = ["test_*.py", "validation.py"]
testpaths = [
    "bearing_capacity", "settlement", "axial_pile", "sheet_pile", "soe",
    "lateral_pile", "pile_group", "wave_equation", "drilled_shaft",
    "seismic_geotech", "retaining_walls", "pavement_design",
    "ground_improvement",
    "slope_stability", "reliability", "downdrag", "geotech_common",
    "opensees_agent", "pystrata_agent", "seismic_signals_agent",
    "liquepy_agent", "hvsrpy_agent", "gstools_agent",
    "salib_agent", "swprocess_agent",
    "pystra_agent",
    "subsurface_characterization",
    "dxf_import",
    "dxf_export",
    "pdf_import",
    "fem2d",
    "geo_project",
    "funhouse_agent",
    "foundry_test_harness",
    "webapp/tests",
    "geotech-references/tests",
]
